<resources>
    <string name="app_name">FitnessTrainer</string>
    <string name="title_settings">Настройки</string>
    <string name="action_settings">Settings</string>
    <string name="show_video">Посмотреть</string>
    <string name="facebook_app_id">1636735713274799</string>
    <string name="search_hint">Поиск</string>
    <string name="empty_text">По вашему запросу не найдено ни одного видео</string>
    <string name="open_store">Загрузить с устройства</string>
    <string name="open_camera">Сделать фото</string>
    <string name="login_title">Логин</string>
    <string name="password_title">Пароль</string>
    <string name="card_number">Номер карты</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sign_in">Войти</string>
    <string name="error">Ошибка!</string>
    <string name="error_version_not_defined">Версия не определена</string>
    <string name="exit">Выход</string>
    <string name="email">E-mail</string>
    <string name="post">Почта</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="sign_up">Регистрация</string>
    <string name="title_account_settings">Настройки аккаунта</string>
    <string name="title_profile_settings">Настройки профиля</string>
    <string name="title_settings_user">Параметры пользователя</string>
    <string name="empty">Пусто</string>
    <string name="autorization_title">Авторизация</string>
    <string name="gender">Пол</string>
    <string name="birthday">День Рождения</string>
    <string name="weight">Вес</string>
    <string name="height">Рост</string>
    <string name="percent">Процент жира</string>
    <string name="not_determined">Не указано</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="set_email">Укажите e-mail</string>
    <string name="set_password">Укажите пароль</string>
    <string name="set_gender">Укажите пол</string>
    <string name="set_value">Укажите значение</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Отмена</string>
    <string name="set_height">Укажите рост</string>
    <string name="set_weight">Укажите вес</string>
    <string name="title_old_mail">Старый адрес</string>
    <string name="title_new_address">Новый адрес</string>
    <string name="old_mail">Старая почта</string>
    <string name="new_email">Новая почта</string>
    <string name="save">Сохранить</string>
    <string name="title_new_password">Новый пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="password_not_equals">Неверно указан старый пароль</string>
    <string name="settings">Настройки</string>
    <string name="analytics">Analytics</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="vk">Вконтакте</string>
    <string name="gplus">Google+</string>
    <string name="extreme">Extreme</string>
    <string name="next">Далее</string>
    <string name="trainer_sign_in">Вход</string>
    <string name="password_confirm">Ещё раз</string>
    <string name="finish_splash">Finish Splash</string>
    <string name="about">О себе</string>
    <string name="your_programs">Ваши программы</string>
    <string name="your_account">Your account</string>
    <string name="add_program">Add program</string>
    <string name="back">Назад</string>
    <string name="exercises">Упражнения</string>
    <string name="algorithm">Алгоритм</string>
    <string name="program_about">О программе</string>
    <string name="exercise_about">Об упражнении</string>
    <string name="program_efficiency">Эффективность</string>
    <string name="choose_program">Выбор программы</string>
    <string name="program_catalog">Каталог</string>
    <string name="program_maker">Maker</string>
    <string name="programs_catalog">Каталог программ</string>
    <string name="days">%s дней</string>
    <string name="add_training">Добавить тренировку</string>
    <string name="add_exercise">Добавить упражнение</string>
    <string name="watch_video">Смотреть видео</string>
    <string name="add_set">Добавить подход</string>
    <string name="expected_efficiency">Ожидаемая\nэффективность</string>
    <string name="empty_trainings">Нет тренировок</string>
    <string name="save_maker_program">Здесь будет действие для сохранения программы из мейкера в мои программы</string>
</resources>
