<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/old_mail_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingsAccountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_old_mail" />

                <ru.extremefitness.fitness_trainer.ui.widgets.SettingsListItem
                    android:id="@+id/old_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    custom:itemHint="@string/set_email"
                    custom:itemTitle="@string/old_mail" />

            </LinearLayout>

            <TextView
                style="@style/SettingsAccountTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_new_address" />

            <ru.extremefitness.fitness_trainer.ui.widgets.SettingsListItem
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                custom:itemHint="@string/set_email"
                custom:itemTitle="@string/new_email" />

            <ru.extremefitness.fitness_trainer.ui.widgets.SettingsListItem
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                custom:itemHint="@string/set_password"
                custom:itemTitle="@string/password_title" />

            <Button
                android:id="@+id/email_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsAccountTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_new_password" />

            <ru.extremefitness.fitness_trainer.ui.widgets.SettingsListItem
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                custom:itemHint="@string/set_password"
                custom:itemTitle="@string/old_password" />

            <ru.extremefitness.fitness_trainer.ui.widgets.SettingsListItem
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                custom:itemHint="@string/set_password"
                custom:itemTitle="@string/title_new_password" />

            <Button
                android:id="@+id/password_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>